fix: footer button hover on mobile view

--- a/Portfolio/sass/layouts/_footer.scss
+++ b/Portfolio/sass/layouts/_footer.scss
@@ -136,3 +136,19 @@
     }
   }
 }
+
+@include media-touch {
+  .button:hover {
+    background-color: $color-dark;
+    color: $color-white;
+    transition: none !important;
+    animation: none !important;
+  }
+
+   .button:active {
+    background-color: $color-dark;
+    color: $color-white;
+    transition: none !important;
+    animation: none !important;
+  }
+}
